# chem

./: .gitignore  docker-compose.yml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  codebase_analysis.md  implementation_patterns.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/molecules/: __init__.py  router.py  schemas.py  service.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_molecules.py
context-engineering/: README.md
context-engineering/PRPs/: PRP-0-chemistry-3d-platform-stack.md
context-engineering/PRPs/templates/: prp_base.md
context-engineering/examples/: error_handling_patterns.py  pydantic_api_patterns.py  rdkit_patterns.py  validation_patterns.py
context-engineering/templates/: INITIAL-api-endpoint.md  INITIAL-data-processing.md
frontend/: .dockerignore  Dockerfile  openapi.json  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/visualize/: page.tsx
frontend/components/: MoleculeViewer.tsx
frontend/src/api/: sdk.gen.ts  types.gen.ts
frontend/types/: 3dmol.d.ts
